# port-libzstd

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  all_cves.json  dependents.json  test-original.sh  validator-report.md  workflow.yaml
safe/: Cargo.toml  PORT.md  build.rs
safe/abi/: export_map.toml
safe/debian/: changelog  clean  control  copyright  rules
safe/debian/tests/: control
safe/docker/dependents/: entrypoint.sh
safe/docs/: unsafe-audit.md
safe/scripts/: build-artifacts.sh  build-deb.sh  build-original-cli-against-safe.sh  capture-upstream-abi.sh  check-cli-permissions.sh  check-dependent-compile-compat.sh  check-validator-phase-results.py  install-safe-debs.sh  phase6-common.sh  run-advanced-mt-tests.sh  run-build-variant-tests.sh  run-capi-decompression.sh  run-capi-roundtrip.sh  run-debian-autopkgtests.sh  run-dependent-matrix.sh  run-educational-decoder-tests.sh  run-full-suite.sh  run-original-cli-tests.sh  run-original-examples.sh  run-original-gzip-tests.sh  run-original-playtests.sh  run-performance-smoke.sh  run-pzstd-tests.sh  run-seekable-tests.sh  run-upstream-fuzz-tests.sh  run-upstream-regression.sh  run-upstream-tests.sh  run-validator-libzstd.sh  run-validator-regressions.sh  run-version-compat-tests.sh  run-zlibwrapper-tests.sh  verify-baseline-contract.sh  verify-deb-profiles.sh  verify-export-parity.sh  verify-install-layout.sh  verify-link-compat.sh
safe/src/: lib.rs
safe/src/common/: alloc.rs  error.rs  frame.rs  skippable.rs  version.rs
safe/src/compress/: advanced.rs  (+15 more)
safe/tests/: upstream_test_matrix.toml
(+106 files in other folders)
