[package]
name = "libzstd-safe"
version = "1.5.5"
edition = "2021"
rust-version = "1.82"
publish = false
build = "build.rs"
description = "Phase-1 scaffold for the libzstd safe port"
license = "BSD-3-Clause OR GPL-2.0-only"

[lib]
name = "zstd"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
legacy = []
threading = []
build-shared-default = ["threading"]
build-static-default = []
variant-mt = ["threading"]
variant-nomt = []

[package.metadata.libzstd-safe]
upstream_root = "../original/libzstd-1.5.5+dfsg2"
abi_baseline = "abi/original.exports.txt"
headers = [
    "include/zstd.h",
    "include/zdict.h",
    "include/zstd_errors.h",
]
